trying to fix issues with responsive

--- a/LumionParser/LumionParser.csproj
+++ b/LumionParser/LumionParser.csproj
@@ -4,6 +4,8 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <ApplicationIcon>lumion-3d-logo.ico</ApplicationIcon>
+    <PackageIcon>lumion-3d-logo.ico</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,6 +21,13 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Properties\lumion-3d-logo.ico">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
